data/derived/fa15/progs/unify/prog1561.ml.out
Characters 48-61:
  if n < 0 then [] else  digitsOfInt n/10 @ n%10;;
                         ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
